[package]
name = "ccolour-juicer"
version = "0.1.0"
authors = ["BezPowell <bez.powell@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
css-color-parser2 = "1.0"

[profile.release]
lto = "thin"
